# code-converter

./: .editorconfig  .gitignore  CMakeLists.txt  CodeTranslator.pro  Dockerfile  LICENSE  SECURITY.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translator.cpp  translator.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  PLUGINS.md  README.md  README_DEV.md  RELEASE_NOTES.md  ROADMAP.md  STYLE_GUIDE.md  TRANSLATOR_ALGORITHMS.md  USER_GUIDE.md
plugins/: README.md
scripts/: build.sh  ci_build.sh  format_code.sh  run_tests.sh
tests/: test_plugin.cpp  test_translator.cpp
translator/: CSharpToJavaTranslator.cpp  CSharpToJavaTranslator.h  CSharpToPHPTranslator.cpp  CSharpToPHPTranslator.h  CSharpToPythonTranslator.cpp  CSharpToPythonTranslator.h  CppToJavaScriptTranslator.cpp  CppToJavaScriptTranslator.h  CppToJavaTranslator.cpp  CppToJavaTranslator.h  CppToPHPTranslator.cpp  CppToPHPTranslator.h  CppToPythonTranslator.cpp  CppToPythonTranslator.h  JavaScriptToCppTranslator.cpp  JavaScriptToCppTranslator.h  JavaScriptToJavaTranslator.cpp  JavaScriptToJavaTranslator.h  JavaScriptToPythonTranslator.cpp  JavaScriptToPythonTranslator.h  JavaToCSharpTranslator.cpp  JavaToCSharpTranslator.h  JavaToCppTranslator.cpp  JavaToCppTranslator.h  JavaToPHPTranslator.cpp  JavaToPHPTranslator.h  JavaToPythonTranslator.cpp  JavaToPythonTranslator.h  PHPToCSharpTranslator.cpp  PHPToCSharpTranslator.h  PHPToCppTranslator.cpp  PHPToCppTranslator.h  PHPToJavaTranslator.cpp  PHPToJavaTranslator.h  PHPToPythonTranslator.cpp  PHPToPythonTranslator.h  PythonToCSharpTranslator.cpp  PythonToCSharpTranslator.h  PythonToCppTranslator.cpp  PythonToCppTranslator.h  (+7 more)
